; ModuleID = '/home/carl/AnghaBench/linux/drivers/mmc/host/extr_ushc.c_ushc_hw_reset.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mmc/host/extr_ushc.c_ushc_hw_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ushc_data = type { i32 }

@USHC_RESET = common dso_local global i32 0, align 4
@USHC_RESET_TYPE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ushc_data*)* @ushc_hw_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ushc_hw_reset(%struct.ushc_data* %0) #0 {
  %2 = alloca %struct.ushc_data*, align 8
  store %struct.ushc_data* %0, %struct.ushc_data** %2, align 8
  %3 = load %struct.ushc_data*, %struct.ushc_data** %2, align 8
  %4 = getelementptr inbounds %struct.ushc_data, %struct.ushc_data* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.ushc_data*, %struct.ushc_data** %2, align 8
  %7 = getelementptr inbounds %struct.ushc_data, %struct.ushc_data* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @usb_sndctrlpipe(i32 %8, i32 0)
  %10 = load i32, i32* @USHC_RESET, align 4
  %11 = load i32, i32* @USHC_RESET_TYPE, align 4
  %12 = call i32 @usb_control_msg(i32 %5, i32 %9, i32 %10, i32 %11, i32 0, i32 0, i32* null, i32 0, i32 100)
  ret i32 %12
}

declare dso_local i32 @usb_control_msg(i32, i32, i32, i32, i32, i32, i32*, i32, i32) #1

declare dso_local i32 @usb_sndctrlpipe(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
